# brand_guardian

./: .env  .gitignore  README.md  main.py  pyproject.toml
backend/: requirements.txt
backend/scripts/: index_documents.py
backend/source/api/: AZinsights.py  server.py
backend/source/graph/: nodes.py  state.py  workflow.py
backend/source/services/: video_indexer.py
